# NannyLink-Kenya

./: package-lock.json  package.json  vite.config.js
backend/: .env  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py  test_env.py
backend/app/config/: logger.py  settings.py
backend/app/db/: base.py  db_conn.py  session.py
backend/app/modules/: __init__.py
backend/app/utils/: daraja_integration.py  email_service.py  results.py  security.py  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 01a8a87b363a_add_foreign_key_for_payments.py  0d3ca97541a9_improved_type_model.py  10427678639b_implemented_default.py  30c50b4b046f_first_migration.py  3bc6639530b1_implemented_all_the_relationships_using_.py  4da45a63db53_add_foreign_key_for_payments.py  4f8211469040_updated_the_schema_added_created_at_and_.py  5e2e965374b5_implemented_all_the_relationships_using_.py  60cb73ce5e1a_improved_nanny_profile.py  66eb6e58ae7b_upgrade_without_match_status_table.py  677bc3cffae4_updated_the_schema_to_include_payment_.py  7198e37df3dd_add_foreign_key_for_payments.py  768ec74367a1_implemented_all_the_relationships_using_.py  7914235fe9a6_updated_the_application_model_to_.py  7a7874d40a71_first_migration.py  7dfafd3c7845_updated_the_payment_schema.py  804b92c3bb10_updated_the_schema_added_created_at_and_.py  935331eeb2b4_add_foreign_key_for_payments.py  961f31b5ab0f_merged_the_match_status_with_the_match_.py  9726143590e4_updated_the_payment_model_to_handle_.py  9a5585bbffa5_implemented_all_the_relationships_using_.py  (+16 more)
(+212 files in other folders)
